--- a/package.json
+++ b/package.json
@@ -7,6 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/three": "^0.156.0",
+    "rete": "^2.0.3",
+    "rete-area-3d-plugin": "^2.0.4",
+    "rete-area-plugin": "^2.0.4",
+    "rete-connection-plugin": "^2.0.2",
+    "rete-render-utils": "^2.0.2",
+    "rete-scopes-plugin": "^2.1.0",
+    "rete-vue-plugin": "^2.1.0",
+    "sass": "^1.77.5",
+    "sass-loader": "^14.2.1",
+    "three": "^0.156.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
